[gd_scene load_steps=5 format=3 uid="uid://dccbytm6erevq"]

[ext_resource type="Script" uid="uid://dg08l7weib1fu" path="res://scripts/ui/inventory_ui.gd" id="1_4ycse"]
[ext_resource type="PackedScene" uid="uid://dkwfqusg1xv8n" path="res://scenes/ui/inventory_slot.tscn" id="2_drsq2"]
[ext_resource type="PackedScene" uid="uid://b5dwqrndlimvv" path="res://scenes/ui/rune_slot.tscn" id="3_drsq2"]
[ext_resource type="PackedScene" uid="uid://ctc83vehvya02" path="res://scenes/ui/zone_shard_slot.tscn" id="4_nuief"]

[node name="InventoryUI" type="CanvasLayer"]
script = ExtResource("1_4ycse")
slots_parent_path = NodePath("SlotContainer")
equip_slots_parent_path = NodePath("Container/HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer/EquipSlotContainer")
rune_slots_parent_path = NodePath("RuneSlotContainer")

[node name="SlotContainer" type="FlowContainer" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -259.0
offset_top = -155.0
grow_horizontal = 0
grow_vertical = 0
alignment = 2

[node name="InventorySlot" parent="SlotContainer" instance=ExtResource("2_drsq2")]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_vertical = 0

[node name="InventorySlot2" parent="SlotContainer" instance=ExtResource("2_drsq2")]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_vertical = 0

[node name="InventorySlot3" parent="SlotContainer" instance=ExtResource("2_drsq2")]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_vertical = 0

[node name="InventorySlot4" parent="SlotContainer" instance=ExtResource("2_drsq2")]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_vertical = 0

[node name="InventorySlot5" parent="SlotContainer" instance=ExtResource("2_drsq2")]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_vertical = 0

[node name="InventorySlot6" parent="SlotContainer" instance=ExtResource("2_drsq2")]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_vertical = 0

[node name="InventorySlot7" parent="SlotContainer" instance=ExtResource("2_drsq2")]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_vertical = 0

[node name="InventorySlot8" parent="SlotContainer" instance=ExtResource("2_drsq2")]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_vertical = 0

[node name="InventorySlot9" parent="SlotContainer" instance=ExtResource("2_drsq2")]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_vertical = 0

[node name="InventorySlot10" parent="SlotContainer" instance=ExtResource("2_drsq2")]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_vertical = 0

[node name="InventorySlot11" parent="SlotContainer" instance=ExtResource("2_drsq2")]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_vertical = 0

[node name="InventorySlot12" parent="SlotContainer" instance=ExtResource("2_drsq2")]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_vertical = 0

[node name="InventorySlot13" parent="SlotContainer" instance=ExtResource("2_drsq2")]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_vertical = 0

[node name="InventorySlot14" parent="SlotContainer" instance=ExtResource("2_drsq2")]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_vertical = 0

[node name="InventorySlot15" parent="SlotContainer" instance=ExtResource("2_drsq2")]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_vertical = 0

[node name="RuneSlotContainer" type="FlowContainer" parent="."]
offset_right = 223.71
offset_bottom = 100.0

[node name="RuneSlot" parent="RuneSlotContainer" instance=ExtResource("3_drsq2")]
layout_mode = 2

[node name="RuneSlot2" parent="RuneSlotContainer" instance=ExtResource("3_drsq2")]
layout_mode = 2
rune_index = 1

[node name="RuneSlot3" parent="RuneSlotContainer" instance=ExtResource("3_drsq2")]
layout_mode = 2
skill_slot_index = 1

[node name="RuneSlot4" parent="RuneSlotContainer" instance=ExtResource("3_drsq2")]
layout_mode = 2
skill_slot_index = 1
rune_index = 1

[node name="ZoneShardSlotContainer" type="FlowContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 205.0
grow_vertical = 0

[node name="ZoneShardSlot" parent="ZoneShardSlotContainer" instance=ExtResource("4_nuief")]
custom_minimum_size = Vector2(42.36, 19.61)
layout_mode = 2
inventory_ui_path = NodePath("../..")
go_button_path = NodePath("../Button")

[node name="Button" type="Button" parent="ZoneShardSlotContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Generate Map"

[node name="Container" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Container"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="Container" parent="Container/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelContainer3" type="Container" parent="Container/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelContainer2" type="PanelContainer" parent="Container/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Container/HBoxContainer/PanelContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="Container/HBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2
text = "Equipment"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Container/HBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2

[node name="EquipSlotContainer" type="HFlowContainer" parent="Container/HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 82.97)
layout_mode = 2
size_flags_horizontal = 3

[node name="WeaponSlot" parent="Container/HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer/EquipSlotContainer" instance=ExtResource("2_drsq2")]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_vertical = 0
is_equipment = true
slot_type = "weapon"

[node name="BodySlot" parent="Container/HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer/EquipSlotContainer" instance=ExtResource("2_drsq2")]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
is_equipment = true
slot_type = "body"

[node name="HelmetSlot" parent="Container/HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer/EquipSlotContainer" instance=ExtResource("2_drsq2")]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_vertical = 0
is_equipment = true
slot_type = "helmet"

[node name="LegsSlot" parent="Container/HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer/EquipSlotContainer" instance=ExtResource("2_drsq2")]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_vertical = 0
is_equipment = true
slot_type = "legs"

[node name="OffhandSlot" parent="Container/HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer/EquipSlotContainer" instance=ExtResource("2_drsq2")]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_vertical = 0
is_equipment = true
slot_type = "offhand"
